--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                                     
 									<div class="col-lg-7" data-aos="fade-up" data-aos-delay="100"><img class="img-fluid" src="images/logo-transparent-white-grey-small.png" /><br></div>
 									<div class="col-lg-5" data-aos="fade-up">
-                                        <br><h6 class="page-header-ui-title">Targeted, Adversary Simulation-Level Spear-Phishing</h6>
-                                        <p class="page-header-ui-text mb-7">Already performing security awareness training or phishing services? Not a problem! We can compliment those by testing your training and Cybersecurity product effectiveness. This is as real-world as it gets! We bring black-box red teaming to social engineering.</p>
+                                        <br><h6 class="page-header-ui-title">Targeted, Adversary-Level Spear-Phishing</h6>
+                                        <p class="page-header-ui-text mb-7">We do tactical spear-phishing really, <i>really</i> well. At PhishU, we <i>only</i> offer phishing and cybersecurity awareness training so we can focus solely on advanced, bleeding-edge techniques like the attackers. More than 90% of breaches still occur from a convincing email. How does your employee training and defensive solutions stack up when you're targeted? This is as real-world as it gets!</p>
                                         <!--<a class="btn btn-teal fw-500 me-2" href="#!">
                                             Get Started
                                             <i class="ms-2" data-feather="arrow-right"></i>
@@ -430,7 +430,7 @@
                                 <div class="col-lg-8">
                                     <!--<div class="badge bg-transparent-light rounded-pill badge-marketing mb-4">Get Started</div>-->
                                     <h2 class="text-white">Who's this for?</h2>
-                                    <p class="lead text-white-50 mb-5">We help customers from all security maturity models! Whether you're just getting started and want to know what your weaknesses are, or you're Fort Knox and want a red team, real-world engagement to see how you would hold up to a dedicated, targeted attack, PhishU is for you!</p>
+                                    <p class="lead text-white-50 mb-5">We help customers from all security maturity models! Bring us in early or, like a red team, after your security maturity is established to test your defenses! Ideally we could be used continuously to help provide ongoing security awarness in your organization, or train your internal resources to perform these services themselves when ready.</p>
                                     <a class="btn btn-teal fw-500" href="#!">Request a Quote!</a>
                                 </div>
                             </div>
@@ -526,7 +526,7 @@
                             </div>
                         </div>
                     </section>-->
-                    <hr class="m-0" />
+                    <!--<hr class="m-0" />-->
                 </main>
             </div>
             <div id="layoutDefault_footer">
@@ -581,7 +581,8 @@
                                         <ul class="list-unstyled mb-0">
                                             <li class="mb-2"><a href="#!">Email</a></li>
                                             <li class="mb-2"><a href="#!">Slack Channel</a></li>
-                                            <li><a href="#!">Twitter</a></li>
+											<li class="mb-2"><a href="#!">Twitter</a></li>
+                                            <li class="mb-2"><a href="#!">Partnership Opportunities</a></li>
                                         </ul>
                                     </div>
                                 </div>
