--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
                                     <div class="mb-5">
                                         <h2>What sets us apart</h2>
-                                        <p class="lead">We offer highly customized campaigns catered to your environment and personnel. Some campaigns we've performed include spoofed Zoom desktop applications, SSO portals (Okta, Microsoft Online, Google, etc), remote administrative portals (Citrix, VDIs, VPNs), and many others!</p>
+                                        <p class="lead">We offer highly customized campaigns catered to your environment and personnel. Some campaigns we've performed include spoofed Zoom desktop applications, SSO portals (Okta, Microsoft Online, Google, etc), remote administrative portals (Citrix, VDIs, VPNs), and many others! Head over to our <a href="/blog">Blog</a> for more information on unique techniques and other campaigns we've delivered recently.</p>
                                     </div>
                                     <div class="row gx-5">
                                         <div class="col-md-6 mb-4">
