--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                         </div>
                                     </li>-->
                                 </ul>
-                                <a class="btn fw-500 ms-lg-4 btn-teal" href="https://shop.startbootstrap.com/sb-ui-kit-pro">
+                                <a class="btn fw-500 ms-lg-4 btn-teal" href="contact-us.html">
                                     Get Started!
                                     <i class="ms-2" data-feather="arrow-right"></i>
                                 </a>
@@ -437,7 +437,7 @@
                                     <!--<div class="badge bg-transparent-light rounded-pill badge-marketing mb-4">Get Started</div>-->
                                     <h2 class="text-white">Who's this for?</h2>
                                     <p class="lead text-white-50 mb-5">We help customers from all security maturity models! Bring us in early or, like a red team, after your security maturity is established to test your defenses! Ideally we could be used continuously to help provide ongoing security awarness in your organization, or train your internal resources to perform these services themselves when ready.</p>
-                                    <a class="btn btn-teal fw-500" href="#!">Request a Quote!</a>
+                                    <a class="btn btn-teal fw-500" href="contact-us.html">Request a Quote!</a>
                                 </div>
                             </div>
                         </div>
@@ -585,7 +585,7 @@
                                     <div class="col-lg-3 col-md-6">
                                         <div class="text-uppercase-expanded text-xs mb-4">Contact Us</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Email</a></li>
+                                            <li class="mb-2"><a href="mailto:curtis@phishu.net">Email</a></li>
                                             <li class="mb-2"><a href="#!">Slack Channel</a></li>
 											<li class="mb-2"><a href="#!">Twitter</a></li>
                                             <li class="mb-2"><a href="#!">Partnership Opportunities</a></li>
