--- a/contact-us.html
+++ b/contact-us.html
@@ -270,7 +270,7 @@
                                     <a href="#!">support@startbootstrap.com</a>
                                 </div>
                             </div>
-                            <form action="https://formspree.io/curtis@phishu.net" method="POST">
+                            <form action="https://formspree.io/f/mayvplpj" method="POST">
                                 <div class="row gx-5 mb-4">
                                     <div class="col-md-6">
                                         <label class="text-dark mb-2" for="inputName">Full name</label>
