--- a/contact-us.html
+++ b/contact-us.html
@@ -273,17 +273,17 @@
                             <form action="https://formspree.io/f/mayvplpj" method="POST">
                                 <div class="row gx-5 mb-4">
                                     <div class="col-md-6">
-                                        <label class="text-dark mb-2" for="inputName" name="Full Name">>Full name</label>
-                                        <input class="form-control py-4" id="inputName" type="text" placeholder="Full name" />
+                                        <label class="text-dark mb-2" for="inputName">Full name</label>
+                                        <input class="form-control py-4" id="inputName" name="Full Name"type="text" placeholder="Full name" />
                                     </div>
                                     <div class="col-md-6">
-                                        <label class="text-dark mb-2" for="inputEmail" name="Email">Email</label>
-                                        <input class="form-control py-4" id="inputEmail" type="email" placeholder="name@example.com" />
+                                        <label class="text-dark mb-2" for="inputEmail">Email</label>
+                                        <input class="form-control py-4" id="inputEmail" name="Email" type="email" placeholder="name@example.com" />
                                     </div>
                                 </div>
                                 <div class="mb-4">
-                                    <label class="text-dark mb-2" for="inputMessage" name="Message">Message</label>
-                                    <textarea class="form-control py-3" id="inputMessage" type="text" placeholder="Enter your message..." rows="4"></textarea>
+                                    <label class="text-dark mb-2" for="inputMessage">Message</label>
+                                    <textarea class="form-control py-3" id="inputMessage" name="Message" type="text" placeholder="Enter your message..." rows="4"></textarea>
                                 </div>
                                 <div class="text-center"><button class="btn btn-primary mt-4" type="submit">Submit Request</button></div>
                             </form>
