--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="PhishU | Targeted Spear Phishing and Security Awareness Training Tools and Services" />
+        <meta name="description" content="Targeted Spear-Phishing and Security Awareness Training Tools and Services" />
         <meta name="author" content="PhishU, LLC" />
         <title>PhishU | Targeted Spear Phishing and Security Awareness Training Tools and Services</title>
         <link href="css/styles.css" rel="stylesheet" />
@@ -18,6 +18,29 @@
 		<meta name="theme-color" content="#ffffff">
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js" crossorigin="anonymous"></script>
+		
+		<meta property="og:url" content="PhishU.net"/>
+		<meta property="og:title" content="PhishU"/>
+		<meta property="og:description" content="Targeted Spear-Phishing and Security Awareness Training Tools and Services"/>
+		<meta property="og:site_name" content="Get Caught Then Join the School"/>
+		<meta property="og:image" content="https://phishu.net/images/unfurl.png"/>
+			
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:domain" value="PhishU.net" />
+		<meta name="twitter:title" value="PhishU" />
+		<meta name="twitter:description" value="Targeted Spear-Phishing and Security Awareness Training Tools and Services" />
+		<meta name="twitter:image" content="https://misformalware.com/img/unfurl.png" />
+		<meta name="twitter:url" value="PhishU.net" />
+		<meta name="twitter:label1" value="Get Caught Then Join the School" />
+
+<script type="application/ld+json">
+    {  "@context" : "http://schema.org",
+       "@type" : "WebSite",
+       "name" : "PhishU",
+       "alternateName" : "Get Caught Then Join the School",
+       "url" : "phishu.net"
+    }
+    </script>
     </head>
     <body>
         <div id="layoutDefault">
