--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js" crossorigin="anonymous"></script>
 		
 		<meta property="og:url" content="PhishU.net"/>
-		<meta property="og:title" content="PhishU"/>
-		<meta property="og:description" content="Targeted Spear-Phishing and Security Awareness Training Tools and Services"/>
-		<meta property="og:site_name" content="Get Caught Then Join the School"/>
-		<meta property="og:image" content="https://phishu.net/images/unfurl.png"/>
+		<meta property="og:title" content="Targeted Spear-Phishing and Security Awareness Training Tools and Services"/>
+		<meta property="og:description" content="Get Caught Then Join the School"/>
+		<meta property="og:site_name" content="PhishU"/>
+		<meta property="og:image" content="https://phishu.net/images/unfurl2.png"/>
 			
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:domain" value="PhishU.net" />
