--- a/contact-us.html
+++ b/contact-us.html
@@ -4,13 +4,43 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Contact - SB UI Kit Pro</title>
+        <meta name="description" content="Targeted Spear-Phishing and Security Awareness Training Tools and Services" />
+        <meta name="author" content="PhishU, LLC" />
+        <title>PhishU | Targeted Spear Phishing and Security Awareness Training Tools and Services</title>
         <link href="css/styles.css" rel="stylesheet" />
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js" crossorigin="anonymous"></script>
+		
+		<meta property="og:url" content="PhishU.net"/>
+		<meta property="og:title" content="Targeted Spear-Phishing and Security Awareness Training Tools and Services"/>
+		<meta property="og:description" content="Get Caught Then Join the School"/>
+		<meta property="og:site_name" content="PhishU"/>
+		<meta property="og:image" content="https://phishu.net/images/unfurl2.png"/>
+			
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:domain" value="PhishU.net" />
+		<meta name="twitter:title" value="PhishU" />
+		<meta name="twitter:description" value="Targeted Spear-Phishing and Security Awareness Training Tools and Services" />
+		<meta name="twitter:image" content="https://misformalware.com/img/unfurl.png" />
+		<meta name="twitter:url" value="PhishU.net" />
+		<meta name="twitter:label1" value="Get Caught Then Join the School" />
+
+<script type="application/ld+json">
+    {  "@context" : "http://schema.org",
+       "@type" : "WebSite",
+       "name" : "PhishU",
+       "alternateName" : "Get Caught Then Join the School",
+       "url" : "phishu.net"
+    }
+    </script>
     </head>
     <body>
         <div id="layoutDefault">
@@ -19,14 +49,14 @@
                     <!-- Navbar-->
                     <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
                         <div class="container px-5">
-                            <a class="navbar-brand text-white" href="index.html">SB UI Kit Pro</a>
+                            <a class="navbar-brand text-white" href="index.html">Spear-Phishing & Training</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i data-feather="menu"></i></button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ms-auto me-lg-5">
-                                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                                    <!--<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>-->
                                     <li class="nav-item dropdown dropdown-xl no-caret">
                                         <a class="nav-link dropdown-toggle" id="navbarDropdownDemos" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Landings
+                                            Services
                                             <i class="fas fa-chevron-right dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end animated--fade-in-up me-lg-n25 me-xl-n15" aria-labelledby="navbarDropdownDemos">
@@ -79,7 +109,7 @@
                                     </li>
                                     <li class="nav-item dropdown dropdown-xl no-caret">
                                         <a class="nav-link dropdown-toggle" id="navbarDropdownPages" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Pages
+                                            Products
                                             <i class="fas fa-chevron-right dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end me-lg-n20 me-xl-n15 animated--fade-in-up" aria-labelledby="navbarDropdownPages">
@@ -131,7 +161,8 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="nav-item dropdown no-caret">
+									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                                    <!--<li class="nav-item dropdown no-caret">
                                         <a class="nav-link dropdown-toggle" id="navbarDropdownDocs" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Documentation
                                             <i class="fas fa-chevron-right dropdown-arrow"></i>
@@ -161,23 +192,26 @@
                                                 </div>
                                             </a>
                                         </div>
-                                    </li>
+                                    </li>-->
                                 </ul>
-                                <a class="btn fw-500 ms-lg-4 btn-teal" href="https://shop.startbootstrap.com/sb-ui-kit-pro">
-                                    Buy Now
+                                <a class="btn fw-500 ms-lg-4 btn-teal" href="contact-us.html">
+                                    Get Started!
                                     <i class="ms-2" data-feather="arrow-right"></i>
                                 </a>
                             </div>
                         </div>
                     </nav>
                     <!-- Page Header-->
+
+
+                    <!-- Page Header-->
                     <header class="page-header-ui page-header-ui-dark bg-gradient-primary-to-secondary">
                         <div class="page-header-ui-content pt-10">
                             <div class="container px-5 text-center">
                                 <div class="row gx-5 justify-content-center">
                                     <div class="col-lg-8">
-                                        <h1 class="page-header-ui-title mb-3">Contact us</h1>
-                                        <p class="page-header-ui-text">Have questions? We're here to help!</p>
+                                        <h1 class="page-header-ui-title mb-3">Request a Quote!</h1>
+                                        <!--<p class="page-header-ui-text">Have questions? We're here to help!</p>-->
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +223,7 @@
                     </header>
                     <section class="bg-light py-10">
                         <div class="container px-5">
-                            <div class="row gx-5 mb-5">
+                            <!--<div class="row gx-5 mb-5">
                                 <div class="col-lg-4 mb-5">
                                     <a class="card card-link border-bottom-0 border-start-0 border-end-0 border-top-lg border-primary lift text-center o-visible h-100" href="#!">
                                         <div class="card-body">
@@ -235,8 +269,8 @@
                                         </div>
                                     </a>
                                 </div>
-                            </div>
-                            <div class="row gx-5 justify-content-center text-center">
+                            </div>-->
+                            <!--<div class="row gx-5 justify-content-center text-center">
                                 <div class="col-lg-5 mb-5 mb-lg-0">
                                     <h5>Join us on Discord!</h5>
                                     <p class="fw-light mb-0">Join the discussion on Discord. Our community can help answer questions!</p>
@@ -248,9 +282,9 @@
                                         <a href="#!">support@example.com</a>
                                     </p>
                                 </div>
-                            </div>
+                            </div>-->
                             <hr class="my-10" />
-                            <div class="row gx-5 justify-content-center">
+                            <!--<div class="row gx-5 justify-content-center">
                                 <div class="col-lg-8 text-center">
                                     <h2>Can't find the answer you need?</h2>
                                     <p class="lead mb-5">Contact us and we'll get back to you as soon as possible with a solution to whatever issues you're having with SB UI Kit Pro.</p>
@@ -269,7 +303,7 @@
                                     <div class="section-preheading">Email Us</div>
                                     <a href="#!">support@startbootstrap.com</a>
                                 </div>
-                            </div>
+                            </div>-->
                             <form action="https://formspree.io/f/mayvplpj" method="POST">
                                 <div class="row gx-5 mb-4">
                                     <div class="col-md-6">
@@ -289,7 +323,7 @@
                             </form>
                         </div>
                         <div class="svg-border-rounded text-dark">
-                            <!-- Rounded SVG Border-->
+                            
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
                         </div>
                     </section>
