--- a/contact-us.html
+++ b/contact-us.html
@@ -205,7 +205,7 @@
 
 
                     <!-- Page Header-->
-                    <header class="page-header-ui page-header-ui-dark bg-gradient-primary-to-secondary">
+                    <header class="page-header-ui page-header-ui-dark bg-gradient-primary-only">
                         <div class="page-header-ui-content pt-10">
                             <div class="container px-5 text-center">
                                 <div class="row gx-5 justify-content-center">
@@ -216,10 +216,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="svg-border-rounded text-light">
-                            <!-- Rounded SVG Border-->
+                        <!-- <div class="svg-border-rounded text-light">
+                            
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
-                        </div>
+                        </div> -->
                     </header>
                     <section class="bg-light py-10">
                         <div class="container px-5">
@@ -283,7 +283,7 @@
                                     </p>
                                 </div>
                             </div>-->
-                            <hr class="my-10" />
+                            <!--<hr class="my-10" />-->
                             <!--<div class="row gx-5 justify-content-center">
                                 <div class="col-lg-8 text-center">
                                     <h2>Can't find the answer you need?</h2>
