--- a/contact-us.html
+++ b/contact-us.html
@@ -334,10 +334,10 @@
                     <div class="container px-5">
                         <div class="row gx-5">
                             <div class="col-lg-3">
-                                <div class="footer-brand">SB UI Kit Pro</div>
-                                <div class="mb-3">Design made easy</div>
+                                <div class="footer-brand">PhishU</div>
+                                <div class="mb-3">Get Caught Then Join the School</div>
                                 <div class="icon-list-social mb-5">
-                                    <a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>
+                                    <!--<a class="icon-list-social-link" href="#!"><i class="fab fa-instagram"></i></a>-->
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-facebook"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-github"></i></a>
                                     <a class="icon-list-social-link" href="#!"><i class="fab fa-twitter"></i></a>
@@ -346,42 +346,43 @@
                             <div class="col-lg-9">
                                 <div class="row gx-5">
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Product</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Services</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Landing</a></li>
-                                            <li class="mb-2"><a href="#!">Pages</a></li>
-                                            <li class="mb-2"><a href="#!">Sections</a></li>
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li><a href="#!">Changelog</a></li>
+                                            <li class="mb-2"><a href="#!">Spear-Phishing</a></li>
+                                            <li class="mb-2"><a href="#!">Awareness Training</a></li>
+                                            <li class="mb-2"><a href="#!">MFA Gap Analysis</a></li>
+                                            <!--<li class="mb-2"><a href="#!">Documentation</a></li>
+                                            <li><a href="#!">Changelog</a></li>-->
                                         </ul>
                                     </div>
                                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Products</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Documentation</a></li>
-                                            <li class="mb-2"><a href="#!">Changelog</a></li>
+                                            <li class="mb-2"><a href="#!">PhishU Phishing Framework</a></li>
+                                            <!--<li class="mb-2"><a href="#!">Changelog</a></li>
                                             <li class="mb-2"><a href="#!">Theme Customizer</a></li>
-                                            <li><a href="#!">UI Kit</a></li>
+                                            <li><a href="#!">UI Kit</a></li>-->
                                         </ul>
                                     </div>
                                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">More</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Utilities</a></li>
-                                            <li class="mb-2"><a href="#!">Components</a></li>
-                                            <li class="mb-2"><a href="#!">Layouts</a></li>
+                                            <li class="mb-2"><a href="#!">Blog</a></li>
+                                            <li class="mb-2"><a href="#!">About Us</a></li>
+                                            <!--<li class="mb-2"><a href="#!">Contact Us</a></li>
                                             <li class="mb-2"><a href="#!">Code Samples</a></li>
                                             <li class="mb-2"><a href="#!">Products</a></li>
                                             <li class="mb-2"><a href="#!">Affiliates</a></li>
-                                            <li><a href="#!">Updates</a></li>
+                                            <li><a href="#!">Updates</a></li>-->
                                         </ul>
                                     </div>
                                     <div class="col-lg-3 col-md-6">
-                                        <div class="text-uppercase-expanded text-xs mb-4">Legal</div>
+                                        <div class="text-uppercase-expanded text-xs mb-4">Contact Us</div>
                                         <ul class="list-unstyled mb-0">
-                                            <li class="mb-2"><a href="#!">Privacy Policy</a></li>
-                                            <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
-                                            <li><a href="#!">License</a></li>
+                                            <li class="mb-2"><a href="mailto:curtis@phishu.net">Email</a></li>
+                                            <li class="mb-2"><a href="#!">Slack Channel</a></li>
+											<li class="mb-2"><a href="#!">Twitter</a></li>
+                                            <li class="mb-2"><a href="#!">Partnership Opportunities</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -389,7 +390,7 @@
                         </div>
                         <hr class="my-5" />
                         <div class="row gx-5 align-items-center">
-                            <div class="col-md-6 small">Copyright &copy; Your Website 2021</div>
+                            <div class="col-md-6 small">Copyright &copy; PhishU 2022</div>
                             <div class="col-md-6 text-md-end small">
                                 <a href="#!">Privacy Policy</a>
                                 &middot;
@@ -402,5 +403,13 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                disable: 'mobile',
+                duration: 600,
+                once: true,
+            });
+        </script>
     </body>
 </html>
