--- a/contact-us.html
+++ b/contact-us.html
@@ -308,11 +308,11 @@
                                 <div class="row gx-5 mb-4">
                                     <div class="col-md-6">
                                         <label class="text-dark mb-2" for="inputName">Full name</label>
-                                        <input class="form-control py-4" id="inputName" name="Full Name"type="text" placeholder="Full name" />
+                                        <input class="form-control py-4" id="inputName" name="Full Name"type="text" placeholder="Full name" required />
                                     </div>
                                     <div class="col-md-6">
                                         <label class="text-dark mb-2" for="inputEmail">Email</label>
-                                        <input class="form-control py-4" id="inputEmail" name="Email" type="email" placeholder="name@example.com" />
+                                        <input class="form-control py-4" id="inputEmail" name="Email" type="email" placeholder="name@example.com" required />
                                     </div>
                                 </div>
                                 <div class="mb-4">
