--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end animated--fade-in-up me-lg-n25 me-xl-n15" aria-labelledby="navbarDropdownDemos">
                                             <div class="row g-0">
-                                                <!--<div class="col-lg-5 p-lg-3 bg-img-cover overlay overlay-primary overlay-70 d-none d-lg-block" style="background-image: url('assets/img/backgrounds/bg-dropdown-xl.jpg')">-->
-						    <div class="page-header-ui page-header-ui-dark bg-gradient-primary-only">
+                                                <div class="col-lg-5 p-lg-3 bg-img-cover overlay overlay-primary overlay-100 d-none d-lg-block" style="background-image: url('assets/img/backgrounds/menubg.png')">
+						    <!--<div class="page-header-ui page-header-ui-dark bg-gradient-primary-only">-->
                                                     <div class="d-flex h-100 w-100 align-items-center justify-content-center">
                                                         <div class="text-white text-center z-1">
                                                             <div class="mb-3">Multipurpose landing pages for a variety of projects.</div>
