--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end animated--fade-in-up me-lg-n25 me-xl-n15" aria-labelledby="navbarDropdownDemos">
                                             <div class="row g-0">
-                                                <div class="col-lg-5 p-lg-3 bg-img-cover overlay overlay-primary overlay-100 d-none d-lg-block" style="background-image: url('assets/img/backgrounds/menubg.png')">
+                                                <div class="col-lg-5 p-lg-3 bg-img-cover bg-gradient-primary-only d-none d-lg-block" style="background-image: url('assets/img/backgrounds/menubg.png')">
 						    <!--<div class="page-header-ui page-header-ui-dark bg-gradient-primary-only">-->
                                                     <div class="d-flex h-100 w-100 align-items-center justify-content-center">
                                                         <div class="text-white text-center z-1">
@@ -424,7 +424,7 @@
                                         <div class="icon-stack flex-shrink-0 bg-teal text-white"><i class="fas fa-question"></i></div>
                                         <div class="ms-4">
                                             <h5 class="text-white">What if we already use KnowBe4 and have ProofPoint, Mimecast, etc?</h5>
-                                            <p class="text-white-50">It's no problem! We compliment these other services by testing the effectiveness of existing training and security solutions. We also leverage our own bleeding-edge techniques that often bypass and identify gaps in awareness training and the most advanced technical solutions.</p>
+                                            <p class="text-white-50">It's no problem! We complement these other services by testing the effectiveness of existing training and security solutions. We also leverage our own bleeding-edge techniques that often bypass and identify gaps in awareness training and the most advanced technical solutions.</p>
                                         </div>
                                     </div>
                                 </div>
