--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end animated--fade-in-up me-lg-n25 me-xl-n15" aria-labelledby="navbarDropdownDemos">
                                             <div class="row g-0">
-                                                <div class="col-lg-5 p-lg-3 bg-img-cover bg-gradient-primary-only d-none d-lg-block" style="background-image: url('assets/img/backgrounds/menubg.png')">
+                                                <div class="col-lg-3 p-lg-3 bg-img-cover bg-gradient-primary-only d-none d-lg-block" style="background-image: url('assets/img/backgrounds/menubg.png')">
 						    <!--<div class="page-header-ui page-header-ui-dark bg-gradient-primary-only">-->
                                                     <div class="d-flex h-100 w-100 align-items-center justify-content-center">
                                                         <div class="text-white text-center z-1">
-                                                            <div class="mb-3">Multipurpose landing pages for a variety of projects.</div>
-                                                            <a class="btn btn-white btn-sm text-primary fw-500" href="index.html">View All</a>
+                                                            <!--<div class="mb-3">Multipurpose landing pages for a variety of projects.</div>
+                                                            <a class="btn btn-white btn-sm text-primary fw-500" href="index.html">View All</a>-->
                                                         </div>
                                                     </div>
                                                 </div>
